1,适配native-image 2,支持生成indy模式到jar中